kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokun
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tokun
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tokun
    spec:
      containers:
        - name: tokun
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: tokun
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tokun
  ports:
    - port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tokun
  annotations:
    gettokun.dev/enabled: "true"
    gettokun.dev/name: Tokun
    gettokun.dev/icon: mdi-ideogram-cjk
    gettokun.dev/group: 1P
spec:
  hostnames:
    - tokun.home.maximemoreillon.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tokun
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
